<resources>
    <string name="app_name">JokeeSingleServingAPP</string>
    <string name="handcrafted_by">Handcrafted by</string>
    <string name="jim_hls">Jim HLS</string>
    <string name="a_joke_day">A joke a day keeps docter away</string>
    <string name="joke_wrong_content">If you joke wrong way, your teeth have to pay.(Serious)</string>
    <string name="copyrights_content">This appis created as part of Hlsolutions program. The materials contained on this website are provided for general information only and do not constitute any form of advice. HLS assumes no responsibility for the accuracy of any particular statement and accepts no liability for any loss or damage which may arise from reliance on the information contained on this site.</string>
    <string name="copyrights_title">Copyright 2021 HLS</string>

    <string name="funny_button_text">This is Funny!</string>
    <string name="not_funny_button_text">This is not funny.</string>
    <string name="clear_cookies_button">Vote again!</string>

    <string name="jokes_content1">A child asked his father, "How were people born?" So his father said, "Adam and Eve made babies, then their babies became adults and made babies, and so on."

The child then went to his mother, asked her the same question and she told him, "We were monkeys then we evolved to become like we are now."

The child ran back to his father and said, "You lied to me!" His father replied, "No, your mom was talking about her side of the family."</string>
    <string name="jokes_content2">Teacher: "Kids,what does the chicken give you?" Student: "Meat!" Teacher: "Very good! Now what does the pig give you?" Student: "Bacon!" Teacher: "Great! And what does the fat cow give you?" Student: "Homework!"</string>
    <string name="jokes_content3">The teacher asked Jimmy, "Why is your cat at school today Jimmy?" Jimmy replied crying, "Because I heard my daddy tell my mommy, 'I am going to eat that pussy once Jimmy leaves for school today!'"</string>
    <string name="jokes_content4">A housewife, an accountant and a lawyer were asked "How much is 2+2?" The housewife replies: "Four!". The accountant says: "I think it's either 3 or 4. Let me run those figures through my spreadsheet one more time." The lawyer pulls the drapes, dims the lights and asks in a hushed voice, "How much do you want it to be?"</string>
    <string name="none_joke">\"That\'s all the jokes for today! Come back another day!\"</string>
</resources>