<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.72" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/margin_normal_3"
        android:scaleType="centerInside"
        android:src="@drawable/hls_logo"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_flower"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="@dimen/margin_normal_2"
        android:scaleType="centerInside"
        android:src="@drawable/flower_fun"
        app:layout_constraintBottom_toBottomOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_handcrafted_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_1"
        android:layout_marginEnd="@dimen/margin_small_2"
        android:text="@string/handcrafted_by"
        android:textColor="@color/color_handcraft_title"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@id/tv_jim_hls"
        app:layout_constraintEnd_toStartOf="@id/img_flower"
        app:layout_constraintTop_toTopOf="@id/img_flower" />

    <TextView
        android:id="@+id/tv_jim_hls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_small_2"
        android:text="@string/jim_hls"
        android:textColor="@color/color_handcraft_name"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toBottomOf="@id/img_flower"
        app:layout_constraintEnd_toStartOf="@id/img_flower"
        app:layout_constraintTop_toBottomOf="@id/tv_handcrafted_by" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/color_bg_joke_title"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_joke_day"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal_2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal_2"
            android:text="@string/joke_wrong_content"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small_2" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_joke_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:breakStrategy="high_quality"
        android:layout_marginTop="@dimen/margin_big_2"
        android:textColor="@color/color_joke_content"
        android:layout_marginStart="@dimen/margin_normal_7"
        android:layout_marginEnd="@dimen/margin_normal_7"
        android:text="@string/jokes_content1"
        app:layout_constraintTop_toBottomOf="@id/guideline2" />

    <TextView
        android:id="@+id/tv_small_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_small_line"
        app:layout_constraintTop_toTopOf="@id/guideline3" />

    <TextView
        android:id="@+id/tv_copyrights_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_normal_1"
        android:breakStrategy="high_quality"
        android:gravity="center"
        android:text="@string/copyrights_content"
        android:textColor="@color/color_copyrights_content"
        android:textSize="@dimen/text_size_small_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3" />

    <TextView
        android:id="@+id/tv_copyrights_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyrights_title"
        android:textColor="@color/color_copyrights_title"
        android:textSize="@dimen/text_size_small_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_copyrights_content" />

    <TextView
        android:id="@+id/btn_funny"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_button_funny"
        android:text="@string/funny_button_text"
        style="@style/button_style"
        app:layout_constraintStart_toStartOf="@id/guideline7"
        app:layout_constraintEnd_toEndOf="@id/guideline5"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        app:layout_constraintBottom_toBottomOf="@id/btn_not_funny"/>

    <TextView
        android:id="@+id/btn_not_funny"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_not_funny"
        android:text="@string/not_funny_button_text"
        style="@style/button_style"
        app:layout_constraintStart_toEndOf="@id/guideline6"
        app:layout_constraintEnd_toEndOf="@id/guideline8"
        app:layout_constraintTop_toBottomOf="@id/guideline4" />

    <TextView
        android:id="@+id/btn_clear_cookies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_funny"
        android:text="@string/clear_cookies_button"
        style="@style/button_style"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline4"/>
</androidx.constraintlayout.widget.ConstraintLayout>